add bracode generation

--- a/flowit_test_app/templates/orders/detail.html
+++ b/flowit_test_app/templates/orders/detail.html
@@ -17,7 +17,7 @@
         <tr>
           <td>{{ order_product.product }}</td>
           <td>{{ order_product.quantity }}</td>
-          <td>{{ order_product.product.barcode }}</td>
+          <td><img src="/media/{{ order_product.product.barcode_image }}" alt="{{ order_product.product.barcode }}"></td>
         </tr>
       {% endfor %}
     </tbody>
