--- a/flowit_test_app/templates/orders/index.html
+++ b/flowit_test_app/templates/orders/index.html
@@ -4,6 +4,7 @@
       <tr>
         <th>Id</th>
         <th>Customer</th>
+        <th>Address</th>
         <th>Created at</th>
         <th>Link</th>
       </tr>
@@ -13,8 +14,9 @@
         <tr>
           <td>{{ order.id }}</td>
           <td>{{ order.customer }}</td>
+          <td>{{ order.customer.address }}</td>
           <td>{{ order.created_at }}</td>
-          <td><a href="/orders/{{ order.id }}/">View order</a></td>
+          <td><a href="{% url 'detail' order.id %}">View order</a></td>
         </tr>
       {% endfor %}
     </tbody>
