--- a/flowit_test_app/templates/orders/index.html
+++ b/flowit_test_app/templates/orders/index.html
@@ -7,6 +7,7 @@
         <th>Address</th>
         <th>Created at</th>
         <th>Link</th>
+        <th>Pdf</th>
       </tr>
     </thead>
     <tbody>
@@ -17,6 +18,7 @@
           <td>{{ order.customer.address }}</td>
           <td>{{ order.created_at }}</td>
           <td><a href="{% url 'detail' order.id %}">View order</a></td>
+          <td><a href="{% url 'pdf' order.id %}">Download</a></td>
         </tr>
       {% endfor %}
     </tbody>
