--- a/flowit_test_app/templates/orders/detail.html
+++ b/flowit_test_app/templates/orders/detail.html
@@ -1,29 +1,39 @@
-<h1>Order: {{ order.id }}</h1>
-<h5>Customer: {{ order.customer }}</h5>
-<h5>Created: {{ order.created_at }}</h5>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>Order: {{ order.id }}</h1>
+    <h5>Customer: {{ order.customer }}</h5>
+    <h5>Created: {{ order.created_at }}</h5>
 
-<h1>Address: {{ order.customer.address }}</h1>
+    <h1>Address: {{ order.customer.address }}</h1>
 
-{% if product_list %}
-  <h2>Products:</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>Product</th>
-        <th>Quantity</th>
-        <th>Barcode</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for order_product in product_list %}
-        <tr>
-          <td>{{ order_product.product }}</td>
-          <td>{{ order_product.quantity }}</td>
-          <td><img src="/media/{{ order_product.product.barcode_image }}" alt="{{ order_product.product.barcode }}"></td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-{% else %}
-  <p>No products are available.</p>
-{% endif %}
+    {% if product_list %}
+      <h2>Products:</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Product</th>
+            <th>Barcode</th>
+            <th>Quantity</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for order_product in product_list %}
+            <tr>
+              <td>{{ order_product.product }}</td>
+              <td><img src="/media/{{ order_product.product.barcode_image }}" alt="{{ order_product.product.barcode }}"></td>
+              <td>{{ order_product.quantity }}</td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    {% else %}
+      <p>No products are available.</p>
+    {% endif %}
+
+  </body>
+</html>
