--- a/flowit_test_app/templates/orders/index.html
+++ b/flowit_test_app/templates/orders/index.html
@@ -1,28 +1,39 @@
-{% if order_list %}
-  <table>
-    <thead>
-      <tr>
-        <th>Id</th>
-        <th>Customer</th>
-        <th>Address</th>
-        <th>Created at</th>
-        <th>Link</th>
-        <th>Pdf</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for order in order_list %}
-        <tr>
-          <td>{{ order.id }}</td>
-          <td>{{ order.customer }}</td>
-          <td>{{ order.customer.address }}</td>
-          <td>{{ order.created_at }}</td>
-          <td><a href="{% url 'detail' order.id %}">View order</a></td>
-          <td><a href="{% url 'pdf' order.id %}">Download</a></td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-{% else %}
-  <p>No orders are available.</p>
-{% endif %}
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>Order List</h1>
+    {% if order_list %}
+      <table>
+        <thead>
+          <tr>
+            <th>Id</th>
+            <th>Customer</th>
+            <th>Address</th>
+            <th>Created at</th>
+            <th>Link</th>
+            <th>Pdf</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for order in order_list %}
+            <tr>
+              <td>{{ order.id }}</td>
+              <td>{{ order.customer }}</td>
+              <td>{{ order.customer.address }}</td>
+              <td>{{ order.created_at }}</td>
+              <td><a href="{% url 'detail' order.id %}">View order</a></td>
+              <td><a href="{% url 'pdf' order.id %}">Download</a></td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    {% else %}
+      <p>No orders are available.</p>
+    {% endif %}
+
+  </body>
+</html>
