--- a/flowit_test_app/templates/orders/index.html
+++ b/flowit_test_app/templates/orders/index.html
@@ -26,9 +26,9 @@
               <td>{{ order.customer }}</td>
               <td>{{ order.customer.address }}</td>
               <td>{{ order.created_at }}</td>
-              <td><a href="{% url 'detail' order.id %}">View order</a></td>
-              <td><a href="{% url 'pdf' order.id %}">Download</a></td>
-              <td><a href="{% url 'email_pdf' order.id %}">Send to email</a></td>
+              <td><a href="{% url 'orders_detail' order.id %}">View order</a></td>
+              <td><a href="{% url 'orders_pdf' order.id %}">Download</a></td>
+              <td><a href="{% url 'orders_email_pdf' order.id %}">Send to email</a></td>
             </tr>
           {% endfor %}
         </tbody>
