--- a/flowit_test_app/templates/products/detail.html
+++ b/flowit_test_app/templates/products/detail.html
@@ -5,7 +5,24 @@
     <title></title>
   </head>
   <body>
-    <h1>Product: {{ product.name }}</h1>
-    <img src="/media/{{ product.barcode_image }}" alt="{{ product.barcode }}">
+    <h1>Edit Product: {{ product.name }}</h1>
+
+    <form action="{% url 'products_update' product.id %}" method="post">
+    {% csrf_token %}
+    <div class="form-group">
+      <label for="name">Name:</label>
+      <input type="text" name="name" id="name" value="{{ product.name }}">
+    </div>
+    <div class="form-group">
+      <label for="barcode">Barcode:</label>
+      <input type="text" name="barcode" id="barcode" value="{{ product.barcode }}">
+    </div>
+
+    <!-- <img src="/media/{{ product.barcode_image }}" alt="{{ product.barcode }}"> -->
+
+    <input type="submit" value="Update">
+    </form>
+
+
   </body>
 </html>
