--- a/flowit_test_app/templates/products/index.html
+++ b/flowit_test_app/templates/products/index.html
@@ -6,6 +6,21 @@
   </head>
   <body>
     <h1>Products List</h1>
+
+    <form action="{% url 'products_index' %}" method="get">
+    {% csrf_token %}
+    <div class="form-group">
+      <label for="name">Name:</label>
+      <input type="text" name="name" id="name" value="{{ filter.name }}">
+    </div>
+    <div class="form-group">
+      <label for="barcode">Barcode:</label>
+      <input type="text" name="barcode" id="barcode" value="{{ filter.barcode }}">
+    </div>
+
+    <input type="submit" value="Filter">
+    </form>
+
     {% if product_list %}
       <table>
         <thead>
